# fraud-detection

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml
infrastructure/grafana/dashboards/: fraud_detection.json
infrastructure/prometheus/: alert_rules.yml  prometheus.yml
notebooks/: README.md  train_model.ipynb
services/monitor/: Dockerfile  MONITOR.md  pyproject.toml
services/monitor/app/: drift.py  main.py
services/monitor/tests/: conftest.py  test_drift.py
services/predictor/: Dockerfile  FEATURES.md  PREDICTOR.md  pyproject.toml
services/predictor/app/: features.py  main.py  model.py
services/predictor/model/: feature_schema.json
services/predictor/tests/: conftest.py  test_features.py
services/producer/: DESIGN.md  Dockerfile  pyproject.toml
services/producer/app/: main.py  transaction.py
