[project]
name = "fraud-detection"
version = "0.1.0"
description = "Production-grade real-time fraud detection system"
requires-python = ">=3.11"
dependencies = []

[tool.uv.workspace]
members = [
    "services/producer",
    "services/predictor",
    "services/monitor",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.11",
    "pytest>=8.0",
    "fakeredis>=2.21",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["services/predictor/tests"]
